# Aynary

./: .gitignore  BUILD_NOTES.md  Cargo.toml  INSTALL.md  Makefile  README.md  build.rs
browser-extension/: README.md  background.js  content.js  manifest.json  native_host.json
data/: aynary-clipboard-monitor.service  aynary-shortcut.sh  com.aynary.Dictionary.desktop  com.aynary.Dictionary.service  dictionary.json.bak  org.gnome.settings-daemon.plugins.media-keys.aynary.gschema.xml
scripts/: convert-csv-to-json.py
src/: api.rs  app.rs  clipboard_monitor.rs  dbus_service.rs  main.rs  native_host.rs  shortcut_handler.rs  ui.rs
